css/styles.css
img {
  margin: 0 auto;
  display: block;
  width: 20%;
}
p {
  font-family: 'Lato', sans-serif;
}
label {
  font-family: 'Lato', sans-serif;
  font-weight: bolder;
}
.form-control {
  margin-bottom: 15px;
}

#formInputSection{
  display: none;
}

#welcome {
  margin-top: 10%;
  padding: 200px;
  background-color: #e5e5e5;
  box-shadow: 10px 10px 20px grey;
}
#welcome .btn{
  width: 300px;
  height: 100px;
  font-size: 2em;
  background-color: grey;
  border: 1px solid grey;

}
#welcome .btn:hover{
  width: 300px;
  height: 100px;
  font-size: 2em;
  background-color: #383838;
  border: none;

}


#ruby, #csharp, #java, #php, #design, #trouble {
  display: none;
}
#responses {
  text-align: center;
}

#responses .btn {
  margin-top: 50px;
}

#php img{
  margin-bottom: 50px;
  margin-top: 70px;
}
#trouble img{
  margin-bottom: 50px;
  margin-top: 50px;
  width: 10%;
}
#design img{
  width: 28%;
}
.container .jumbotron {
  font-family: 'Lato', sans-serif;
  font-weight: bold;
  font-size: 4em;
  text-align: center;
  background: -webkit-linear-gradient(bottom right, #51ccc3, #2dada6);
  color: white;
  border-radius: 0px;
}
.panel-body {
  border: 1px solid lightgrey;
  min-height: 500px;
  border-radius: 0px;
  background-color: #e5e5e5;
}
.panel .panel-header{
  font-size: 1.5em;
  color: grey;
}

.btn {
  display: block;
  margin: 0 auto;
}

.well {
  min-height: 500px;
  margin-top: 20%;
}

